--- a/MavenProject/pom.xml
+++ b/MavenProject/pom.xml
@@ -25,56 +25,54 @@
   <build>
     <plugins>
       <plugin>
-        <!-- We use the maven-shade plugin to create a fat jar that contains all necessary dependencies. -->
-    <!-- Change the value of <mainClass>...</mainClass> if your program entry point changes. -->
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-shade-plugin</artifactId>
-      <version>3.2.1</version>
-      <executions>
-      <!-- Run shade goal on package phase -->
-      <execution>
-      <phase>package</phase>
-      <goals>
-          <goal>shade</goal>
-      </goals>
-      <configuration>
-      <artifactSet>
-          <excludes>
-              <exclude>org.apache.flink:force-shading</exclude>
-              <exclude>com.google.code.findbugs:jsr305</exclude>
-              <!--exclude>org.slf4j:*</exclude-->
-              <!--exclude>log4j:*</exclude-->
-          </excludes>
-      </artifactSet>
-      <filters>
-      <filter>
-      <!-- Do not copy the signatures in the META-INF folder.
-      Otherwise, this might cause SecurityExceptions when using the JAR. -->
-      <artifact>*:*</artifact>
-      <excludes>
-          <exclude>META-INF/*.SF</exclude>
-          <exclude>META-INF/*.DSA</exclude>
-          <exclude>META-INF/*.RSA</exclude>
-      </excludes>
-      </filter>
-      </filters>
-          <transformers>
-              <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>com.example.MavenProject</mainClass>
-              </transformer>
-  
-              <!-- append default configs -->
-              <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                  <resource>reference.conf</resource>
-              </transformer>
-          
-          </transformers>
-      </configuration>
-      </execution>
-      </executions>
-      
-      </plugin> 
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.2.1</version>
+        <executions>
+        <!-- Run shade goal on package phase -->
+        <execution>
+        <phase>package</phase>
+        <goals>
+            <goal>shade</goal>
+        </goals>
+        <configuration>
+        <artifactSet>
+            <excludes>
+                <exclude>org.apache.flink:force-shading</exclude>
+                <exclude>com.google.code.findbugs:jsr305</exclude>
+                <!--exclude>org.slf4j:*</exclude-->
+                <!--exclude>log4j:*</exclude-->
+            </excludes>
+        </artifactSet>
+        <filters>
+        <filter>
+        <!-- Do not copy the signatures in the META-INF folder.
+        Otherwise, this might cause SecurityExceptions when using the JAR. -->
+        <artifact>*:*</artifact>
+        <excludes>
+            <exclude>META-INF/*.SF</exclude>
+            <exclude>META-INF/*.DSA</exclude>
+            <exclude>META-INF/*.RSA</exclude>
+        </excludes>
+        </filter>
+        </filters>
+            <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                    <mainClass>com.example.App</mainClass>
+                </transformer>
+    
+                <!-- append default configs -->
+                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                    <resource>reference.conf</resource>
+                </transformer>
+            
+            </transformers>
+        </configuration>
+        </execution>
+        </executions>
+        </plugin>
     </plugins>
   </build>
+
 
 </project>
